--- a/home abc/assets/css/Newsletter-Subscription-Form.css
+++ b/home abc/assets/css/Newsletter-Subscription-Form.css
@@ -69,7 +69,7 @@
 }
 
 .newsletter-subscribe form .btn-primary {
-  background-color: #055ada !important;
+  background-color: #01001c !important;
   color: #fff;
   outline: none !important;
 }
