--- a/abc blog 3/assets/css/style.css
+++ b/abc blog 3/assets/css/style.css
@@ -25,6 +25,7 @@ li {
 }
 
 .footer {
+  color: black;
   background-color: #292b2c;
   margin: 0px auto;
   padding: 20px 0px;
@@ -33,7 +34,7 @@ li {
 
 .btn-google i {
   border-radius: 50%;
-  height: 54px;
+  height: 40px;
   width: 54px;
   line-height: 54px;
   background-color: rgb(255, 255, 255, 0.1);
@@ -81,5 +82,35 @@ li {
   text-align: center;
   text-decoration: none;
   transition: .25s ease-out;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+#by-class {
+  line-height: 10px;
+}
+
+.navbar {
+  min-height: 20px !important;
+}
+
+a {
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+div {
+}
+
+@media (min-width: 300px) {
+  .rounded.float-left {
+    border-radius: 20px !important;
+  }
 }
 
