--- a/abc blog 3/assets/css/styles.css
+++ b/abc blog 3/assets/css/styles.css
@@ -1,7 +1,3 @@
-col-lg-4.text-center.text-lg-left {
-    height: 400px;
-}
-
 a {
   margin: 10px;
   text-align: center;
@@ -47,7 +43,7 @@ a {
   div {
     align-items: center;
     margin: auto;
-    width: 100%;
+    width: 100;
   }
 }
 
@@ -92,5 +88,9 @@ a {
   a {
     font-size: 25px !important;
   }
+}
+
+.rounded {
+  border-radius: 40px !important;
 }
 
