--- a/Shivangi 2/assets/css/style.css
+++ b/Shivangi 2/assets/css/style.css
@@ -111,10 +111,6 @@ a:hover {
   }
 }
 
-.col-md-4.col-lg-3 {
-  padding: 15px;
-}
-
 #pic {
   width: 200px;
   height: 200px;
@@ -138,5 +134,9 @@ a:hover {
   #parallax {
     width: 80%;
   }
+}
+
+.col-6.col-sm-6.col-md-4.col-lg-4.text-center {
+  padding-bottom: 30px;
 }
 
